updated the post request at orders route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -185,13 +185,13 @@
                 }).then(function(response) {
                     if(response.redirected){
                         window.alert('Order unsuccessful. Please log-in to continue.')
-                    }else{
-
                     }
+                    
                     return response;
                 },function(error) {
                     console.log(error.message);
                 })
+                resetOrder();
             }
         }
     </script>
