bug fixes at orders page

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -12,186 +12,39 @@
         <%- include("./partials/sidebar") %>
         
         <div class = "order-container">
-            <div class="orderbox">    
-                <div class="order">  
-                    <div style="border-bottom-left-radius: 30px;" class="order-box">
-                        <span  style="background-color: #EAF0F0;            
-                        border-top-left-radius: 15px;
-                        height: 5vh;
-                        "><p>ITEM</p></span>
-                        <span><p>CHICKEN</p></span>
-                        <span><p>SALAD</p></span>
-                        <span><p>CORNDOG</p></span>
+            
+            <% for(i = 0; i <= orders.length - 1; i++){ %>
+                <div class="orderbox">    
+                    <div class="order">  
+                        <div style="border-bottom-left-radius: 30px;" class="order-box">
+                            <span  style="background-color: #EAF0F0;            
+                            border-top-left-radius: 15px;
+                            height: 5vh;
+                            "><p>ITEM</p></span>
+                                    <% orders[i].order_details.forEach((order)=>{ %>
+                                        <span><p><%= order.name %></p></span>
+                                    <% }) %>
+                        </div>
+    
+                        <div style="border-bottom-right-radius: 30px; " class="order-box">
+                            <span style="background-color: #EAF0F0;
+                            border-top-right-radius: 15px;
+                            height: 5vh;"
+                            ><p>QTY</p></span>
+                            <span><p>1</p></span>
+                          
+                        </div>
                     </div>
-
-                    <div style="border-bottom-right-radius: 30px; " class="order-box">
-                        <span style="background-color: #EAF0F0;
-                        border-top-right-radius: 15px;
-                        height: 5vh;"
-                        ><p>QTY</p></span>
-                        <span><p>1</p></span>
-                        <span><p>2</p></span>
-                        <span><p>3</p></span>
+    
+                    <div class="buttons-box">
+                        <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
+                        <button style="margin-bottom: 20px;
+                        background-color: #8BB5BE;">MARK AS DONE</button>
                     </div>
-                </div>
-
-                <div class="buttons-box">
-                    <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
-                    <button style="margin-bottom: 20px;
-                    background-color: #8BB5BE;">MARK AS DONE</button>
-                </div>
-            </div>
-
-        <div class="orderbox">    
-            <div class="order">  
-                <div style="border-bottom-left-radius: 30px;" class="order-box">
-                    <span  style="background-color: #EAF0F0;            
-                    border-top-left-radius: 15px;
-                    height: 5vh;
-                    "><p>ITEM</p></span>
-                    <span><p>CHICKEN</p></span>
-                    <span><p>SALAD</p></span>
-                    <span><p>CORNDOG</p></span>
-                </div>
-
-                <div style="border-bottom-right-radius: 30px; " class="order-box">
-                    <span style="background-color: #EAF0F0;
-                    border-top-right-radius: 15px;
-                    height: 5vh;"
-                    ><p>QTY</p></span>
-                    <span><p>1</p></span>
-                    <span><p>2</p></span>
-                    <span><p>3</p></span>
-                </div>
-            </div>
-
-            <div class="buttons-box">
-                <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
-                <button style="margin-bottom: 20px;
-                background-color: #8BB5BE;">MARK AS DONE</button>
-            </div>
-        </div>
-
-        <div class="orderbox">    
-            <div class="order">  
-                <div style="border-bottom-left-radius: 30px;" class="order-box">
-                    <span  style="background-color: #EAF0F0;            
-                    border-top-left-radius: 15px;
-                    height: 5vh;
-                    "><p>ITEM</p></span>
-                    <span><p>CHICKEN</p></span>
-                    <span><p>SALAD</p></span>
-                    <span><p>CORNDOG</p></span>
-                </div>
-
-                <div style="border-bottom-right-radius: 30px; " class="order-box">
-                    <span style="background-color: #EAF0F0;
-                    border-top-right-radius: 15px;
-                    height: 5vh;"
-                    ><p>QTY</p></span>
-                    <span><p>1</p></span>
-                    <span><p>2</p></span>
-                    <span><p>3</p></span>
-                </div>
-            </div>
-
-            <div class="buttons-box">
-                <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
-                <button style="margin-bottom: 20px;
-                background-color: #8BB5BE;">MARK AS DONE</button>
-            </div>
-        </div>
-
-        <div class="orderbox">    
-            <div class="order">  
-                <div style="border-bottom-left-radius: 30px;" class="order-box">
-                    <span  style="background-color: #EAF0F0;            
-                    border-top-left-radius: 15px;
-                    height: 5vh;
-                    "><p>ITEM</p></span>
-                    <span><p>CHICKEN</p></span>
-                    <span><p>SALAD</p></span>
-                    <span><p>CORNDOG</p></span>
-                </div>
-
-                <div style="border-bottom-right-radius: 30px; " class="order-box">
-                    <span style="background-color: #EAF0F0;
-                    border-top-right-radius: 15px;
-                    height: 5vh;"
-                    ><p>QTY</p></span>
-                    <span><p>1</p></span>
-                    <span><p>2</p></span>
-                    <span><p>3</p></span>
-                </div>
-            </div>
-
-            <div class="buttons-box">
-                <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
-                <button style="margin-bottom: 20px;
-                background-color: #8BB5BE;">MARK AS DONE</button>
-            </div>
-        </div>
-
-        <div class="orderbox">    
-            <div class="order">  
-                <div style="border-bottom-left-radius: 30px;" class="order-box">
-                    <span  style="background-color: #EAF0F0;            
-                    border-top-left-radius: 15px;
-                    height: 5vh;
-                    "><p>ITEM</p></span>
-                    <span><p>CHICKEN</p></span>
-                    <span><p>SALAD</p></span>
-                    <span><p>CORNDOG</p></span>
-                </div>
-
-                <div style="border-bottom-right-radius: 30px; " class="order-box">
-                    <span style="background-color: #EAF0F0;
-                    border-top-right-radius: 15px;
-                    height: 5vh;"
-                    ><p>QTY</p></span>
-                    <span><p>1</p></span>
-                    <span><p>2</p></span>
-                    <span><p>3</p></span>
-                </div>
-            </div>
-
-            <div class="buttons-box">
-                <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
-                <button style="margin-bottom: 20px;
-                background-color: #8BB5BE;">MARK AS DONE</button>
-            </div>
-        </div>
-
-        <div class="orderbox">    
-            <div class="order">  
-                <div style="border-bottom-left-radius: 30px;" class="order-box">
-                    <span  style="background-color: #EAF0F0;            
-                    border-top-left-radius: 15px;
-                    height: 5vh;
-                    "><p>ITEM</p></span>
-                    <span><p>CHICKEN</p></span>
-                    <span><p>SALAD</p></span>
-                    <span><p>CORNDOG</p></span>
-                </div>
-
-                <div style="border-bottom-right-radius: 30px; " class="order-box">
-                    <span style="background-color: #EAF0F0;
-                    border-top-right-radius: 15px;
-                    height: 5vh;"
-                    ><p>QTY</p></span>
-                    <span><p>1</p></span>
-                    <span><p>2</p></span>
-                    <span><p>3</p></span>
-                </div>
-            </div>
-
-            <div class="buttons-box">
-                <button style="background-color: #EC5A5A;">CANCEL ORDER</button>
-                <button style="margin-bottom: 20px;
-                background-color: #8BB5BE;">MARK AS DONE</button>
-            </div>
-        </div>    
+                </div>   
+            <% } %>
+            
+  
     </div>
-
 </body>
 </html>
