--- a/views/test.ejs
+++ b/views/test.ejs
@@ -29,62 +29,18 @@
         <th>ORDERS</th>
         <th>SALES</th>
     </tr>
-    <tr>
-        <td>001</td>
-        <td>MACAWILI</td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-    </tr>
-    <tr>
-        <td>002</td>
-        <td>TEANO</td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-    </tr>
-    <tr>
-        <td>003</td>
-        <td>CANTOS</td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-    </tr>
-    <tr>
-        <td>004</td>
-        <td>ALEGRE</td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-    </tr>
-    <tr>
-        <td>005</td>
-        <td>GIGACHAD</td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-    </tr>
-    <tr>
-        <td>006</td>
-        <td>BATONG BAKAL</td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-    </tr>
-    <tr>
-        <td>007</td>
-        <td>TIGER</td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-    </tr>
-    <tr>
-        <td>008</td>
-        <td>SUMALMAL</td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-        <td><input type="checkbox" name=" " id=" "></td>
-    </tr>
+    
+    <% usersData.forEach((user) => { %>
+        <tr>
+            <td><%= user.user_id %></td>
+            <td>Atty. Garret</td>
+            <td><input type="checkbox" id="myCheckbox" <% if(user.hasMenuAccess){ %>checked<% } %>></td>
+            <td><input type="checkbox" name=" " id=" " <% if(user.hasOrdersAccess){ %>checked<% } %>></td>
+            <td><input type="checkbox" name=" " id=" " <% if(user.hasSalesAccess){ %>checked<% } %>></td>
+        </tr>    
+    <% }) %>
+    
+    
 </table>
 </div>
 </body>
