--- a/public/styles/access.css
+++ b/public/styles/access.css
@@ -105,7 +105,7 @@ ion-icon:hover{
 .topbox{
     margin-top: 8%;
     width: 80%;
-    height: 60vh;
+    height: auto;
     margin-left: 150px;
 }
 .topbox input{
@@ -120,12 +120,14 @@ ion-icon:hover{
 
 }
 .topbox td{
- text-align: center;
- background-color: rgb(219, 218, 218);
+    text-align: center;
+    background-color: rgb(219, 218, 218);
+    height: 50px;
 }
 
 .topbox th{
     background-color: rgb(173, 173, 245);
+    height: 50px;
 }
 
 .container-header{
