--- a/views/test.ejs
+++ b/views/test.ejs
@@ -46,14 +46,14 @@
         <div class="close-btn">×</div>
             <div class="custom-model-wrap">
                 <div class="pop-up-content-wrap">
-                <form action="">
-                    <fieldset>
+                <form class="manage-pup-up" action="">
+                    <fieldset class="fs-search-user">
                         <legend>Search User</legend>
                         <input type="text" placeholder="User ID">
                         <button>Search</button>
                     </fieldset>
                     
-                    <fieldset>
+                    <fieldset class="fs-user-details">
                         <legend>User Details</legend>
                         <label for="name">Name</label>
                         <input type="text" name="name">
@@ -66,10 +66,10 @@
                         <label for="password">Password</label>
                         <input type="password" name="password">
                         <br>
-                        <!-- <label for="name">Name</label>
+                        <label for="name">Access</label>
                         <input type="checkbox" name="name" value="Menu">
                         <input type="checkbox" name="name">
-                        <input type="checkbox" name="name"> -->
+                        <input type="checkbox" name="name">
                         
                     </fieldset>
                 </form>
