updated layout of manage users form

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -55,21 +55,38 @@
                     
                     <fieldset class="fs-user-details">
                         <legend>User Details</legend>
-                        <label for="name">Name</label>
-                        <input type="text" name="name">
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" name="name">
+                        </div>
                         <br>
-
-                        <label for="username">Username</label>
-                        <input type="text" name="username">
+                        <div>
+                            <label for="username">Username</label>
+                            <input type="text" name="username">
+                        </div>
+                        
                         <br>
-
-                        <label for="password">Password</label>
-                        <input type="password" name="password">
+                        <div>
+                            <label for="password">Password</label>
+                            <input type="password" name="password">
+                        </div>
+                        
                         <br>
-                        <label for="name">Access</label>
-                        <input type="checkbox" name="name" value="Menu">
-                        <input type="checkbox" name="name">
-                        <input type="checkbox" name="name">
+                        <div>
+                            <label for="name">Access</label><br>
+                            <input type="checkbox" name="name">
+                            <label for="">Menu</label><br>
+                            <input type="checkbox" name="name">
+                            <label for="">Orders</label><br>
+                            <input type="checkbox" name="name">
+                            <label for="">Sales</label><br>
+                        </div>
+                        <div style="text-align: center; margin-top: 20px;">
+                            <button>Add</button>
+                            <button>Remove</button>
+                            <button>Save</button>
+                        </div>
+                        
                         
                     </fieldset>
                 </form>
