--- a/public/styles/access.css
+++ b/public/styles/access.css
@@ -270,6 +270,12 @@ button{
     width: 92%;
   }
 
+  .manage-pup-up input[type='checkbox']{
+    height: 20px;
+    text-align: left;
+    width: 20px;
+  }
+
   .fs-user-details{
     display: grid;
   }
